--- a/public/index.html
+++ b/public/index.html
@@ -170,9 +170,9 @@
 			})
 		});
 	</script>
-	<script src="/js/border-round.js" async defer></script>
-	<script src="/js/config-google-map.js" async defer></script>
-	<script src="/js/enviaEmail.js" async defer></script>
+	<script src="/js/border-round.js"  defer></script>
+	<script src="/js/config-google-map.js"  defer></script>
+	<script src="/js/enviaEmail.js"  defer></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" async defer></script>
 
 </body>
