--- a/public/index.html
+++ b/public/index.html
@@ -173,7 +173,7 @@
 	<script src="/js/border-round.js"  defer></script>
 	<script src="/js/config-google-map.js"  defer></script>
 	<script src="/js/enviaEmail.js"  defer></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
 
 </body>
 </html>
