--- a/dev/index.html
+++ b/dev/index.html
@@ -8,10 +8,10 @@
 	<![endif]-->
 
 	<!-- Meta tags -->
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title></title>
+		<meta name="description" content="">
+		<meta name="keywords" content="">
 	<!-- /Meta tags -->
 
 	<!-- INCON -->
@@ -24,15 +24,14 @@
 
 </head>
 <body>
-
-<section class="conteudo_primario" style="background-image: url('images/bg-fisioterapia-ortopedica.jpg	');">
+<section class="conteudo_primario bgParallax" style="background-image: url('images/bg-fisioterapia-ortopedica.jpg	');" data-speed="2">
 	<header class="topo"  style="background-image: url('images/bg-header.png');">
 		<div class="container">
 			<a href="" class="logo" title="SEO">
 				<img src="images/logo-empresa.png" alt="" />
 			</a>
 			<div class="contatos">
-				<img class="icon_phone" src="images/icon-phone.png" alt="SEO" />
+				<img class="icon_phone" src="images/icon-phone.png" alt="" />
 				<p>(11) 99999 9999  |  (11) 9999 9999</p>
 				<p class="mini">Lorem ipsum</p>
 			</div>
@@ -46,14 +45,14 @@
 				<p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
 				<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia</p>
 			</div>
-			<a href="#" class="link border_round" title="SEO">
+			<a href="#" class="link border_round" title="">
 				lorem ipsum
 				<span>dolor sit amet</span>
-				<img src="images/arrow-right.svg" alt="SEO" />
+				<img src="images/arrow-right.svg" alt="" />
 			</a>
 		</div>
 	</div>
-	<div class="linhas" style="background-image: url('images/bg-primario-linhas.png');"></div>
+	<div class="linhas bgParallax" style="background-image: url('images/bg-primario-linhas.png');" data-speed="5"></div>
 	
 </section>
 
@@ -73,20 +72,20 @@
 		</div>
 
 		<div class="aside">
-			<div class="border_round"><img src="images/fisioterapia.jpg" alt="" /></div>
+			<div class="border_round "><img src="images/fisioterapia.jpg" alt="" /></div>
 			<img class="icon" src="images/icon-fisioterapia.png" alt="" />
 		</div>
 
 	</div>
 </section>
 
-<section class="conteudo_terciario" style="background-image: url('images/bg-massagem.jpg');">
+<section class="conteudo_terciario bgParallax" style="background-image: url('images/bg-massagem.jpg');" data-speed="2">
 
 	<div class="container info3">
 		<h2 class="titulo third_color">
 			DOLLOR SIT 
 			<span class="subtitulo">Lorem</span>
-			<img class="arrow" src="images/arrow-right-green.svg" alt="SEO" />
+			<img class="arrow" src="images/arrow-right-green.svg" alt="" />
 		</h2>
 			
 		<div class="content conteudo_texto_info3">
@@ -96,7 +95,7 @@
 			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione </p>
 			</div>
 			<div class="border_round aside">
-				<img src="images/icon-massagem.png" alt="SEO" />
+				<img src="images/icon-massagem.png" alt="" />
 			</div>	
 		</div>
 	</div>
@@ -146,12 +145,12 @@
 	<section class="sub_rodape">
 		<div class="container">
 			<p>Lorem Ipsum © Copyright - Todos os direitos reservados</p>
-			<a class="made_by" href="" title=""><img src="images/logo-rmc.png" alt="SEO" /></a>
+			<a class="made_by" href="" title=""><img src="images/logo-rmc.png" alt="" /></a>
 		</div>
 	</section>  
 </footer>
 	
-	<script src="/js/jquery-3.2.1.min.js"></script>
+	<script src="/js/jquery-3.2.1.min.js" ></script>
 	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function(){
@@ -159,7 +158,7 @@
 			sr.reveal('.border_round', { 
 				duration: 500,
 				delay: 100,
-				delay: 200 
+				delay: 100 
 			});
 			sr.reveal('.image_aside', { 
 				duration: 500,
@@ -167,12 +166,20 @@
 				origin: 'top',
 				distance: '500px',
 				scale: 0.5,
-			})
+			});
+			sr.reveal('.icon', { 
+				duration: 500,
+				delay: 500,
+				origin: 'bottom',
+				distance: '500px',
+				scale: 0.5,
+			});
 		});
 	</script>
-	<script src="/js/border-round.js"  defer></script>
-	<script src="/js/config-google-map.js"  defer></script>
-	<script src="/js/enviaEmail.js"  defer></script>
+	<script src="/js/border-round.js" ></script>
+	<script src="/js/parallax.js" ></script>
+	<script src="/js/config-google-map.js"  ></script>
+	<script src="/js/enviaEmail.js" ></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
 
 </body>
