--- a/dev/index.html
+++ b/dev/index.html
@@ -20,7 +20,9 @@
 
 	<link rel="canonical" href=" " />
 
+	<!-- build:css css/style.css -->
 	<link rel="stylesheet" href="css/style.css" />
+	<!-- endbuild -->
 
 </head>
 <body>
@@ -150,8 +152,11 @@
 	</section>  
 </footer>
 	
+	
 	<script src="/js/jquery-3.2.1.min.js" ></script>
-	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+	<script src="/js/scrollreveal.min.js" ></script>
+	
+	
 	<script type="text/javascript">
 		$(document).ready(function(){
 			window.sr = ScrollReveal();
@@ -176,11 +181,16 @@
 			});
 		});
 	</script>
-	<script src="/js/border-round.js" ></script>
-	<script src="/js/parallax.js" ></script>
-	<script src="/js/config-google-map.js"  ></script>
-	<script src="/js/enviaEmail.js" ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
+
+	<!-- build:js  /js/componentes.js-->
+	<script src="/js/border-round.js" defer></script>
+	<script src="/js/parallax.js" defer></script> 
+	<script src="/js/enviaEmail.js" defer></script>
+	<!-- endbuild -->
+
+	<script src="/js/config-google-map.js" defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
+
 
 </body>
 </html>
