--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
 
 	<link rel="canonical" href=" " />
 
-	<link rel="stylesheet" href="css/style.css" />
+	<link rel="stylesheet" href="css/style.css"/>
 
 </head>
 <body>
@@ -150,8 +150,11 @@
 	</section>  
 </footer>
 	
+	
 	<script src="/js/jquery-3.2.1.min.js" ></script>
-	<script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+	<script src="/js/scrollreveal.min.js" ></script>
+	
+	
 	<script type="text/javascript">
 		$(document).ready(function(){
 			window.sr = ScrollReveal();
@@ -176,11 +179,12 @@
 			});
 		});
 	</script>
-	<script src="/js/border-round.js" ></script>
-	<script src="/js/parallax.js" ></script>
-	<script src="/js/config-google-map.js"  ></script>
-	<script src="/js/enviaEmail.js" ></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
+
+	<script src="/js/componentes.js" defer></script>
+
+	<script src="/js/config-google-map.js" defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDH_OlEmgC4e5vZ4a9X8rRugVVs1sczCSg&callback=initMap" defer></script>
+
 
 </body>
 </html>
